<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.landing.LandingActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/logologia"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="80dp"
            android:contentDescription="@string/logo_logia"
            android:src="@drawable/logo_logia_fix"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/tv_pilih"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_pilih"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        </TextView>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/spin_lokasi"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_margin="20dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            app:layout_constraintStart_toStartOf="@+id/tv_pilih"
            app:layout_constraintEnd_toEndOf="@+id/tv_pilih"
            app:layout_constraintTop_toBottomOf="@+id/tv_pilih">
            <AutoCompleteTextView
                android:id="@+id/autocomplete_lokasi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pilih_lokasi"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/bt_lewat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/bt_lewat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spin_lokasi">
        </Button>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/powered_by"
            android:textSize="14sp"
            android:layout_marginBottom="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/logojbg">
        </TextView>
        <ImageView
            android:id="@+id/logojbg"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:src="@drawable/logo_jbg"
            android:layout_marginBottom="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/logo_pt_jbg" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>