<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.detailremote.DetailRemoteFragment">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">

            <ImageView
                android:id="@+id/iv_close"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:src="@drawable/ic_close_black"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cv_image"
                tools:ignore="ContentDescription" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/cv_image_preview"
                    android:layout_width="210dp"
                    android:layout_height="280dp"
                    android:contentDescription="@string/desc_iv">
                </ImageView>
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/bt_pilih"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/bt_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cv_image">
            </Button>

            <TextView
                android:id="@+id/tv_judul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/form_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bt_pilih">
            </TextView>

            <TextView
                android:id="@+id/tv_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/id_tanaman"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_judul">
            </TextView>

            <TextView
                android:id="@+id/tv_idisi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/id_tanaman"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_id">
            </TextView>

            <TextView
                android:id="@+id/tv_tanggal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/form_tanggal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_idisi">
            </TextView>

            <TextView
                android:id="@+id/tv_tanggalisi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/form_tanggal"
                app:layout_constraintEnd_toStartOf="@+id/icon_date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_tanggal">
            </TextView>

            <ImageView
                android:id="@+id/icon_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_date_24"
                android:padding="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_tanggalisi"
                app:layout_constraintStart_toEndOf="@id/tv_tanggalisi"
                app:layout_constraintTop_toTopOf="@+id/tv_tanggalisi"
                app:layout_constraintEnd_toEndOf="parent">
            </ImageView>

            <TextView
                android:id="@+id/tv_lat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/form_lat"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/icon_date">
            </TextView>

            <EditText
                android:id="@+id/et_lat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:inputType="numberDecimal|numberSigned"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_lat">
            </EditText>

            <TextView
                android:id="@+id/tv_long"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/form_long"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_lat">
            </TextView>

            <EditText
                android:id="@+id/et_long"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:inputType="numberDecimal|numberSigned"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_long">
            </EditText>

            <TextView
                android:id="@+id/tv_elev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/form_elev"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_long">
            </TextView>

            <EditText
                android:id="@+id/et_elev"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:inputType="numberDecimal|numberSigned"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_elev">
            </EditText>

            <TextView
                android:id="@+id/tv_jentan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/form_jentan"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_elev">
            </TextView>

            <Spinner
                android:id="@+id/spin_jentan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:padding="10dp"
                android:layout_margin="12dp"
                style="@style/style_spinner"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_jentan">
            </Spinner>

            <TextView
                android:id="@+id/tv_lokasi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/form_lokasi"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/spin_jentan">
            </TextView>

            <Spinner
                android:id="@+id/spin_lokasi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:padding="10dp"
                android:layout_margin="12dp"
                style="@style/style_spinner"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_lokasi">
            </Spinner>

            <TextView
                android:id="@+id/tv_kegiatan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/form_kegiatan"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/spin_lokasi">
            </TextView>

            <Spinner
                android:id="@+id/spin_kegiatan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:padding="10dp"
                android:layout_margin="12dp"
                style="@style/style_spinner"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_kegiatan">
            </Spinner>

            <TextView
                android:id="@+id/tv_sk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/form_sk"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/spin_kegiatan">
            </TextView>

            <Spinner
                android:id="@+id/spin_sk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:padding="10dp"
                android:layout_margin="12dp"
                style="@style/style_spinner"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_sk">
            </Spinner>

            <TextView
                android:id="@+id/tv_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/form_status"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/spin_sk">
            </TextView>

            <Spinner
                android:id="@+id/spin_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:padding="10dp"
                android:layout_margin="12dp"
                style="@style/style_spinner"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_status">
            </Spinner>

            <TextView
                android:id="@+id/tv_tinggi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/form_tinggi"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/spin_status">
            </TextView>

            <EditText
                android:id="@+id/et_tinggi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:inputType="numberDecimal|numberSigned"
                app:layout_constraintStart_toStartOf="@id/tv_tinggi"
                app:layout_constraintTop_toBottomOf="@id/tv_tinggi">
            </EditText>

            <TextView
                android:id="@+id/tv_tinggi_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:text="@string/sat_tinggi"
                app:layout_constraintBaseline_toBaselineOf="@id/et_tinggi"
                app:layout_constraintEnd_toEndOf="parent">
            </TextView>

            <TextView
                android:id="@+id/tv_dia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/form_dia"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_tinggi">
            </TextView>

            <EditText
                android:id="@+id/et_dia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:inputType="numberDecimal|numberSigned"
                app:layout_constraintStart_toStartOf="@id/tv_dia"
                app:layout_constraintTop_toBottomOf="@id/tv_dia">
            </EditText>

            <TextView
                android:id="@+id/tv_dia_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:text="@string/sat_dia"
                app:layout_constraintBaseline_toBaselineOf="@id/et_dia"
                app:layout_constraintEnd_toEndOf="parent">
            </TextView>

            <Button
                android:id="@+id/bt_batal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/bt_batal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_dia"
                app:layout_constraintEnd_toStartOf="@+id/bt_simpan">
            </Button>

            <Button
                android:id="@+id/bt_simpan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/bt_simpan"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/bt_batal"
                app:layout_constraintTop_toBottomOf="@id/et_dia">
            </Button>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>